Security Code Refactoring